force-app/main/default/objects/ffr__DataViewJoinFilter__c/ffr__DataViewJoinFilter__c.object-meta.xml
<CustomObject>
    <description>Stores the expression that serves as a filter to restrict the data included by a dataview join.</description>
    <label>Dataview Join Filter</label>
    <nameField>
        <displayFormat>DJF-{0000}</displayFormat>
        <label>Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dataview Join Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>