force-app/main/default/objects/ffr__DataViewJoinFilter__c/fields/ffr__DataViewField__c.field-meta.xml
<CustomField>
    <fullName>ffr__DataViewField__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DataView Field</label>
    <referenceTo>ffr__DataViewField__c</referenceTo>
    <relationshipLabel>Dataview Join Filters</relationshipLabel>
    <relationshipName>DataViewJoinFilters</relationshipName>
    <type>Lookup</type>
</CustomField>