force-app/main/default/objects/ffr__DataViewJoinFilter__c/fields/ffr__DataViewJoin__c.field-meta.xml
<CustomField>
    <fullName>ffr__DataViewJoin__c</fullName>
    <label>DataView Join</label>
    <referenceTo>ffr__DataViewJoin__c</referenceTo>
    <relationshipLabel>Dataview Join Filters</relationshipLabel>
    <relationshipName>DataviewJoinFilters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>