force-app/main/default/objects/ffr__DataViewJoinFilter__c/fields/ffr__From__c.field-meta.xml
<CustomField>
    <fullName>ffr__From__c</fullName>
    <label>From</label>
    <length>120</length>
    <type>Text</type>
</CustomField>